More link fixes.

--- a/2.3.1/extend.html
+++ b/2.3.1/extend.html
@@ -124,7 +124,7 @@
           <p>As an extension of CSS, LESS includes variables, mixins for reusable snippets of code, operations for simple math, nesting, and even color functions.</p>
 
           <h3>Learn more</h3>
-          <p>Visit the official website at <a href="http://lesscss.org">http://lesscss.org</a> to learn more.</p>
+          <p>Visit the official website at <a href="http://lesscss.org/">http://lesscss.org/</a> to learn more.</p>
         </section>
 
 
@@ -156,7 +156,7 @@
           <p>To recompile the .less files, just save them and reload your page. Less.js compiles them and stores them in local storage.</p>
 
           <h3>Unofficial Mac app</h3>
-          <p><a href="http://incident57.com/less/">The unofficial Mac app</a> watches directories of .less files and compiles the code to local files after every save of a watched .less file. If you like, you can toggle preferences in the app for automatic minifying and which directory the compiled files end up in.</p>
+          <p><a href="https://incident57.com/less/">The unofficial Mac app</a> watches directories of .less files and compiles the code to local files after every save of a watched .less file. If you like, you can toggle preferences in the app for automatic minifying and which directory the compiled files end up in.</p>
 
           <h3>More apps</h3>
           <h4><a href="http://crunchapp.net/" rel="noopener" target="_blank">Crunch</a></h4>
