--- a/2.0.4/less.html
+++ b/2.0.4/less.html
@@ -88,7 +88,7 @@
 ================================================== -->
 <header class="jumbotron subhead" id="overview">
   <h1>Using LESS with Bootstrap</h1>
-  <p class="lead">Customize and extend Bootstrap with <a href="http://lesscss.org" rel="noopener" target="_blank">LESS</a>, a CSS preprocessor, to take advantage of the variables, mixins, and more used to build Bootstrap's CSS.</p>
+  <p class="lead">Customize and extend Bootstrap with <a href="http://lesscss.org/" rel="noopener" target="_blank">LESS</a>, a CSS preprocessor, to take advantage of the variables, mixins, and more used to build Bootstrap's CSS.</p>
   <div class="subnav">
     <ul class="nav nav-pills">
       <li><a href="#builtWith">Built with Less</a></li>
@@ -119,7 +119,7 @@
     <div class="span4">
       <h3>Learn more</h3>
       <img style="float: right; height: 36px;" src="assets/img/less-logo-large.png" alt="LESS CSS">
-      <p>Visit the official website at <a href="http://lesscss.org">http://lesscss.org</a> to learn more.</p>
+      <p>Visit the official website at <a href="http://lesscss.org/">http://lesscss.org/</a> to learn more.</p>
     </div>
   </div>
   <div class="row">
@@ -1014,7 +1014,7 @@
   <div class="row">
     <div class="span4">
       <h3>Unofficial Mac app</h3>
-      <p><a href="http://incident57.com/less/">The unofficial Mac app</a> watches directories of .less files and compiles the code to local files after every save of a watched .less file.</p>
+      <p><a href="https://incident57.com/less/">The unofficial Mac app</a> watches directories of .less files and compiles the code to local files after every save of a watched .less file.</p>
       <p>If you like, you can toggle preferences in the app for automatic minifying and which directory the compiled files end up in.</p>
     </div><!-- /span4 -->
     <div class="span4">
